add this data in backend  code

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ PG_DATABASE=Housekeeping
 PG_SSL=false
 
 JWT_SECRET=choose-a-long-random-string
+
+MAYTAPI_PRODUCT_ID=your-product-id
+MAYTAPI_PHONE_ID=your-phone-id
+MAYTAPI_TOKEN=your-maytapi-token
+MAYTAPI_GROUP_ID=your-whatsapp-group-id
