--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,28 +1,140 @@
-name: Node.js CI
+name: "🚀 Node.js CI & Deploy to EC2"
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches: [ "master" ]   # yahi branch pe deploy chahiye
+  workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
+    runs-on:
+      - self-hosted
+      - Linux
+      - X64
 
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    env:
+      RUNNER_TEMP: /home/ubuntu/actions-runner/_temp
+      RUNNER_TOOL_CACHE: /home/ubuntu/actions-runner/_tool
+      DEPLOY_DIR: /home/ubuntu/BatchCode-backend-aws
+      NODE_ENV: development
+      PORT: 3005
+      LOG_LEVEL: info
+      PG_HOST: ${{ secrets.PG_HOST }}
+      PG_PORT: 5432
+      PG_USER: ${{ secrets.PG_USER }}
+      PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
+      PG_DATABASE: ${{ secrets.PG_DATABASE }}
+      PG_SSL: true
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: 5432
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_SSL: true
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      JWT_EXPIRES_IN: 1d
+      AWS_REGION: ap-south-1
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - name: "📥 Checkout code"
+        uses: actions/checkout@v4
+
+      - name: "🛠 Prepare temp/cache dirs"
+        run: |
+          mkdir -p "$RUNNER_TEMP" "$RUNNER_TOOL_CACHE"
+
+      - name: "🟢 Setup Node.js"
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      # Workspace (temp) me dependencies install kar lena (tests wagaira ke liye)
+      - name: "📦 Install dependencies (workspace)"
+        run: npm ci
+
+      # Agar build script hai to hi build kare
+      - name: "🧪 Build (if script exists)"
+        run: |
+          if node -e "const p=require('./package.json'); process.exit(p.scripts && p.scripts.build ? 0 : 1)"; then
+            echo "✅ Build script मिला, npm run build चला रहे हैं…"
+            npm run build
+          else
+            echo "ℹ️ Build script नहीं मिला, build step skip कर रहे हैं।"
+          fi
+
+      # 🚚 Actual deployment: code ko /home/ubuntu/BatchCode-backend-aws me sync karo
+      - name: "📂 Sync code to deploy directory"
+        run: |
+          echo "Syncing code to $DEPLOY_DIR ..."
+          mkdir -p "$DEPLOY_DIR"
+          rsync -av --delete ./ "$DEPLOY_DIR"/
+
+      # 🔁 Deploy with PM2 from DEPLOY_DIR
+      - name: "🚀 Deploy with PM2 (src/server.js)"
+        shell: bash
+        run: |
+          set -e
+
+          # PM2 installed है या नहीं, check करें
+          if ! command -v pm2 >/dev/null 2>&1; then
+            echo "PM2 नहीं मिला, install कर रहे हैं…"
+            sudo npm i -g pm2
+          fi
+
+          APP_NAME="batchcode-backend"
+
+          echo "Using APP_NAME=$APP_NAME"
+          echo "Using DEPLOY_DIR=$DEPLOY_DIR"
+
+          cd "$DEPLOY_DIR"
+
+          echo "Writing .env from workflow secrets..."
+          cat > .env <<EOF
+          NODE_ENV=${NODE_ENV}
+          PORT=${PORT}
+          LOG_LEVEL=${LOG_LEVEL}
+
+          PG_HOST=${PG_HOST}
+          PG_PORT=${PG_PORT}
+          PG_USER=${PG_USER}
+          PG_PASSWORD=${PG_PASSWORD}
+          PG_DATABASE=${PG_DATABASE}
+          PG_SSL=${PG_SSL}
+
+          DB_HOST=${DB_HOST}
+          DB_PORT=${DB_PORT}
+          DB_USER=${DB_USER}
+          DB_PASSWORD=${DB_PASSWORD}
+          DB_NAME=${DB_NAME}
+          DB_SSL=${DB_SSL}
+
+          JWT_SECRET=${JWT_SECRET}
+          JWT_EXPIRES_IN=${JWT_EXPIRES_IN}
+
+          AWS_REGION=${AWS_REGION}
+          AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+          AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+          AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
+          EOF
+
+          # Deploy dir me dependencies install/update करो
+          npm ci
+
+          # अगर पहले से process है तो reload करो, नहीं है तो नया start करो
+          if pm2 describe "${APP_NAME}" >/dev/null 2>&1; then
+            echo "🌀 Existing PM2 process मिला, reload कर रहे हैं…"
+            pm2 reload "${APP_NAME}" --update-env
+          else
+            echo "✨ PM2 process नहीं मिला, नया start कर रहे हैं…"
+            pm2 start "$DEPLOY_DIR/src/server.js" --name "${APP_NAME}"
+          fi
+
+          # Process list save (reboot के बाद के लिए)
+          pm2 save || true
+
+          echo "✅ PM2 status:"
+          pm2 status
