update api in today histpry

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ JWT_SECRET=choose-a-long-random-string
 MAYTAPI_PRODUCT_ID=your-product-id
 MAYTAPI_PHONE_ID=your-phone-id
 MAYTAPI_TOKEN=your-maytapi-token
-MAYTAPI_GROUP_ID=your-whatsapp-group-id
+MAYTAPI_GROUP_ID=120363399433702056@g.us
