add this update this code and pi are chnages data

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,8 +1,8 @@
-name: 🚀 Auto Deploy to EC2 (Housekeeping Backend)
+name: "🚀 Node.js CI & Deploy to EC2"
 
 on:
   push:
-    branches: ["master"]      # If your main branch is "main", change it
+    branches: ["master"]   # agar aapka branch "main" hai to yahan main likho
   workflow_dispatch:
 
 jobs:
@@ -13,15 +13,16 @@ jobs:
       - X64
 
     env:
+      RUNNER_TEMP: /home/ubuntu/actions-runner/_temp
+      RUNNER_TOOL_CACHE: /home/ubuntu/actions-runner/_tool
       DEPLOY_DIR: /home/ubuntu/housekeeping-backend
       APP_NAME: housekeeping-backend
 
-      # App runtime env
       NODE_ENV: production
       PORT: 3005
       LOG_LEVEL: info
 
-      # DB SECRETS
+      # ---- Main DB (PG_*) ----
       PG_HOST: ${{ secrets.PG_HOST }}
       PG_PORT: 5432
       PG_USER: ${{ secrets.PG_USER }}
@@ -29,44 +30,71 @@ jobs:
       PG_DATABASE: ${{ secrets.PG_DATABASE }}
       PG_SSL: true
 
+      # ---- (Optional) Second DB alias (agar code me use hota ho) ----
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: 5432
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_SSL: true
+
+      # ---- Auth ----
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
       JWT_EXPIRES_IN: 30d
 
+      # ---- Maytapi (WhatsApp) ----
+      MAYTAPI_PRODUCT_ID: ${{ secrets.MAYTAPI_PRODUCT_ID }}
+      MAYTAPI_PHONE_ID: ${{ secrets.MAYTAPI_PHONE_ID }}
+      MAYTAPI_TOKEN: ${{ secrets.MAYTAPI_TOKEN }}
+      MAYTAPI_GROUP_ID: ${{ secrets.MAYTAPI_GROUP_ID }}
+
     steps:
-      - name: "📥 Checkout Code"
+      - name: "📥 Checkout code"
         uses: actions/checkout@v4
+
+      - name: "🛠 Prepare temp/cache dirs"
+        run: |
+          mkdir -p "$RUNNER_TEMP" "$RUNNER_TOOL_CACHE"
 
       - name: "🟢 Setup Node.js"
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: npm
 
-      - name: "📦 Install Dependencies (CI workspace)"
+      - name: "📦 Install dependencies (CI workspace)"
         run: npm ci
 
-      - name: "🧪 Build if build script exists"
+      - name: "🧪 Build (if script exists)"
         run: |
-          if npm run | grep -q "build"; then
-            echo "🚀 Running build..."
+          if node -e "const p=require('./package.json'); process.exit(p?.scripts?.build ? 0 : 1)"; then
+            echo "✅ Build script मिला, npm run build चला रहे हैं…"
             npm run build
           else
-            echo "ℹ️ No build script found. Skipping build."
+            echo "ℹ️ Build script नहीं मिला, build step skip कर रहे हैं।"
           fi
 
-      - name: "📂 Sync Code to EC2 Deploy Directory"
+      - name: "📂 Sync code to deploy directory"
         run: |
-          echo "Syncing project to EC2 deploy directory..."
+          echo "Syncing code to $DEPLOY_DIR ..."
           mkdir -p "$DEPLOY_DIR"
-          rsync -av --delete \
-            --exclude ".git" \
-            --exclude "node_modules" \
-            ./ "$DEPLOY_DIR"/
+          rsync -av --delete --exclude '.git' --exclude 'node_modules' ./ "$DEPLOY_DIR"/
 
-      - name: "🔐 Generate .env File in EC2 Deploy Directory"
+      - name: "🚀 Deploy with PM2 (src/server.js)"
+        shell: bash
         run: |
+          set -e
+
+          if ! command -v pm2 >/dev/null 2>&1; then
+            echo "PM2 नहीं मिला, install कर रहे हैं…"
+            sudo npm i -g pm2
+          fi
+
           cd "$DEPLOY_DIR"
-          cat <<EOF > .env
+
+          echo "Writing .env from workflow secrets..."
+          # ⚠️ Yahan quotes NAHI honi chahiye, taaki variables expand ho saken
+          cat << EOF > .env
 NODE_ENV=${NODE_ENV}
 PORT=${PORT}
 LOG_LEVEL=${LOG_LEVEL}
@@ -78,29 +106,34 @@ PG_PASSWORD=${PG_PASSWORD}
 PG_DATABASE=${PG_DATABASE}
 PG_SSL=${PG_SSL}
 
+DB_HOST=${DB_HOST}
+DB_PORT=${DB_PORT}
+DB_USER=${DB_USER}
+DB_PASSWORD=${DB_PASSWORD}
+DB_NAME=${DB_NAME}
+DB_SSL=${DB_SSL}
+
 JWT_SECRET=${JWT_SECRET}
 JWT_EXPIRES_IN=${JWT_EXPIRES_IN}
+
+MAYTAPI_PRODUCT_ID=${MAYTAPI_PRODUCT_ID}
+MAYTAPI_PHONE_ID=${MAYTAPI_PHONE_ID}
+MAYTAPI_TOKEN=${MAYTAPI_TOKEN}
+MAYTAPI_GROUP_ID=${MAYTAPI_GROUP_ID}
 EOF
 
-      - name: "🚀 Start / Restart with PM2"
-        run: |
-          cd "$DEPLOY_DIR"
-
-          echo "📦 Installing production dependencies..."
+          echo "📦 Installing production dependencies in $DEPLOY_DIR ..."
           npm ci --omit=dev
 
-          if ! command -v pm2 >/dev/null 2>&1; then
-            echo "📌 Installing PM2..."
-            sudo npm install -g pm2
-          fi
-
-          if pm2 describe "$APP_NAME" >/dev/null 2>&1; then
-            echo "🔁 Restarting existing PM2 process..."
-            pm2 restart "$APP_NAME" --update-env
+          if pm2 describe "${APP_NAME}" >/dev/null 2>&1; then
+            echo "🌀 Existing PM2 process मिला, RESTART कर रहे हैं…"
+            pm2 restart "${APP_NAME}" --update-env
           else
-            echo "✨ Starting new PM2 process..."
-            pm2 start src/server.js --name "$APP_NAME"
+            echo "✨ PM2 process नहीं मिला, नया start कर रहे हैं…"
+            pm2 start src/server.js --name "${APP_NAME}"
           fi
 
           pm2 save || true
+
+          echo "✅ PM2 status:"
           pm2 status
