add this update this code and pi are chnages data

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,7 +2,7 @@ name: "🚀 Node.js CI & Deploy to EC2"
 
 on:
   push:
-    branches: ["master"]   # agar aapka branch "main" hai to yahan main likho
+    branches: ["master"] # deploy only from master
   workflow_dispatch:
 
 jobs:
@@ -17,32 +17,23 @@ jobs:
       RUNNER_TOOL_CACHE: /home/ubuntu/actions-runner/_tool
       DEPLOY_DIR: /home/ubuntu/housekeeping-backend
       APP_NAME: housekeeping-backend
-
       NODE_ENV: production
       PORT: 3005
       LOG_LEVEL: info
-
-      # ---- Main DB (PG_*) ----
       PG_HOST: ${{ secrets.PG_HOST }}
       PG_PORT: 5432
       PG_USER: ${{ secrets.PG_USER }}
       PG_PASSWORD: ${{ secrets.PG_PASSWORD }}
       PG_DATABASE: ${{ secrets.PG_DATABASE }}
       PG_SSL: true
-
-      # ---- (Optional) Second DB alias (agar code me use hota ho) ----
       DB_HOST: ${{ secrets.DB_HOST }}
       DB_PORT: 5432
       DB_USER: ${{ secrets.DB_USER }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_NAME: ${{ secrets.DB_NAME }}
       DB_SSL: true
-
-      # ---- Auth ----
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
       JWT_EXPIRES_IN: 30d
-
-      # ---- Maytapi (WhatsApp) ----
       MAYTAPI_PRODUCT_ID: ${{ secrets.MAYTAPI_PRODUCT_ID }}
       MAYTAPI_PHONE_ID: ${{ secrets.MAYTAPI_PHONE_ID }}
       MAYTAPI_TOKEN: ${{ secrets.MAYTAPI_TOKEN }}
@@ -62,7 +53,7 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: "📦 Install dependencies (CI workspace)"
+      - name: "📦 Install dependencies (workspace)"
         run: npm ci
 
       - name: "🧪 Build (if script exists)"
@@ -93,8 +84,7 @@ jobs:
           cd "$DEPLOY_DIR"
 
           echo "Writing .env from workflow secrets..."
-          # ⚠️ Yahan quotes NAHI honi chahiye, taaki variables expand ho saken
-          cat << EOF > .env
+          cat > .env <<EOF
 NODE_ENV=${NODE_ENV}
 PORT=${PORT}
 LOG_LEVEL=${LOG_LEVEL}
@@ -126,11 +116,11 @@ EOF
           npm ci --omit=dev
 
           if pm2 describe "${APP_NAME}" >/dev/null 2>&1; then
-            echo "🌀 Existing PM2 process मिला, RESTART कर रहे हैं…"
-            pm2 restart "${APP_NAME}" --update-env
+            echo "🌀 Existing PM2 process मिला, reload कर रहे हैं…"
+            pm2 reload "${APP_NAME}" --update-env
           else
             echo "✨ PM2 process नहीं मिला, नया start कर रहे हैं…"
-            pm2 start src/server.js --name "${APP_NAME}"
+            pm2 start "$DEPLOY_DIR/src/server.js" --name "${APP_NAME}"
           fi
 
           pm2 save || true
