--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.13.0",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
+    "redis": "^5.10.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
