--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 node_modules
 dist
 .env
+.env.*
+.env.local
+.env.development
+.env.production
+.env.test
+*.env
 # uploads
 npm-debug.log*
 yarn-error.log*
 .DS_Store
+
+
 
 
